Update CommandDriver.java